Working file transfer protocol